re PR middle-end/37379 ([graphite] ICE compiling aermod.f90 with -ffast-math -floop-block -O2 -fgraphite)

2008-11-07  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/37379
	* tree-scalar-evolution.c (instantiate_scev_1): Return
	chrec_dont_know for VL_EXP_CLASS_P.

From-SVN: r141682